# curious-now

./: .dockerignore  .env.example  .env.test  .gitignore  CODE_REVIEW.md  Dockerfile  LOGBOOK.md  Makefile  PRODUCTION_READINESS.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  ruff.toml
config/: clustering.v0.json  source_pack.sample.v0.json  sources.json  topics.seed.v0.json  topics.seed.v1.json
curious_now/: ai_generation.py  article_text_hydration.py  cache.py  cli.py  clustering.py  db.py  email_service.py  impact_scoring.py  ingestion.py  logging_config.py  metrics.py  migrations.py  notifications.py  paper_text_hydration.py  rate_limit.py  repo_stage1.py  repo_stage10.py  repo_stage2.py  repo_stage3.py  repo_stage4.py  repo_stage5.py  repo_stage6.py  repo_stage8.py  retention.py  settings.py  topic_tagging.py
deploy/: RENDER.md
design_docs/: README.md  accessibility.md  ai_features_roadmap.md  backend_review_checklist.md  cicd_pipeline.md  decisions.md  email_templates.md  error_empty_states.md  frontend_components.md  frontend_data_layer.md  frontend_handoff.md  frontend_pwa.md  frontend_testing.md  high_impact_feature_plan.md  implementation_plan_overview.md  infrastructure.md  openapi.v0.yaml  ops_runbook.md  project_motivation.md  security_operations.md  source_pack_v0.md  stage0.md  stage1.md  stage10.md  stage2.md  stage3.md  stage3_backend.md  stage4.md  stage5.md  stage6.md  stage7.md  stage8.md  stage9.md  url_normalization_v0.md
scripts/: backfill_doi_and_rehydrate.py  run_continuous.sh  (+2 more)
(+253 files in other folders)
