[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curious-now"
version = "0.1.0"
description = "Curious Now backend service"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "httpx==0.28.1",
  "feedparser==6.0.11",
  "python-dateutil==2.9.0.post0",
  "psycopg[binary]==3.2.3",
  "psycopg-pool==3.2.4",
  "tenacity==9.0.0",
  "jinja2==3.1.5",
  "itsdangerous==2.2.0",
  "python-multipart==0.0.19",
  "redis==5.2.1",
  "eval-type-backport==0.3.1",
  "pymupdf==1.25.3",
  "pdfplumber==0.11.4",
  "pylatexenc==2.10",
  "beautifulsoup4==4.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-xdist==3.8.0",
  "pytest-asyncio==0.24.0",
  "ruff==0.9.4",
  "mypy==1.14.1",
  "types-python-dateutil==2.9.0.20241206",
  "pyyaml==6.0.2",
]

[tool.setuptools.packages.find]
include = ["curious_now*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
markers = [
  "integration: requires a running Postgres/Redis (e.g. via docker compose)",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
ignore_missing_imports = true
